--- a/app/views/reports/_form.html.erb
+++ b/app/views/reports/_form.html.erb
@@ -416,6 +416,6 @@
   </dialog>
 
   <%# --- TEMPLATES --- %>
-  <%= render "form_templates" %> 
+  <%= render "form_templates", form: form %> 
 
 <% end %>
