--- a/app/views/reports/_form_templates.html.erb
+++ b/app/views/reports/_form_templates.html.erb
@@ -16,9 +16,7 @@
 
 <%# 3. EQUIPMENT TEMPLATE %>
 <template id="equipment-template">
-  <% model = Report.new %>
-  <% model.equipment_entries.build %>
-  <%= fields_for "report[equipment_entries_attributes]", model.equipment_entries.first, child_index: "NEW_RECORD" do |f| %>
+  <%= form.fields_for :equipment_entries, EquipmentEntry.new, child_index: "NEW_RECORD" do |f| %>
     <%= render "equipment_entry_fields", f: f %>
   <% end %>
 </template>
