exporter attempt number 2

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -37,6 +37,10 @@
 
     <div class="form-row">
       <div class="form-group">
+        <%= form.label :prime_contractor, "Prime Contractor" %>
+        <%= form.text_field :prime_contractor %>
+      </div>
+      <div class="form-group">
         <%= form.label :project_manager, "Project Manager (PM)" %>
         <%= form.text_field :project_manager %>
       </div>
